EasyHook/DllImport.cs

// EasyHook (File: EasyHook\DllImport.cs)
//
// Copyright (c) 2009 Christoph Husse & Copyright (c) 2015 Justin Stenning
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
// 
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
// 
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.
//
// Please visit https://easyhook.github.io for more information
// about the project and latest updates.

using System;
using System.Runtime.InteropServices;

namespace EasyHook;

static class NativeApiX86
{
    private const string DllName = "EasyHook32.dll";

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern string RtlGetLastErrorStringCopy();

    public static string RtlGetLastErrorString()
    {
        return RtlGetLastErrorStringCopy();
    }

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int RtlGetLastError();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern void LhUninstallAllHooks();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhInstallHook(
        IntPtr InEntryPoint,
        IntPtr InHookProc,
        IntPtr InCallback,
        IntPtr OutHandle);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhUninstallHook(IntPtr RefHandle);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhWaitForPendingRemovals();


    /*
        Setup the ACLs after hook installation. Please note that every
        hook starts suspended. You will have to set a proper ACL to
        make it active!
    */
    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhSetInclusiveACL(
                [MarshalAs(UnmanagedType.LPArray, SizeParamIndex=1)]
                int[] InThreadIdList,
                int InThreadCount,
                IntPtr InHandle);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhSetExclusiveACL(
                [MarshalAs(UnmanagedType.LPArray, SizeParamIndex=1)]
                int[] InThreadIdList,
                int InThreadCount,
                IntPtr InHandle);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhSetGlobalInclusiveACL(
                [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 1)]
                int[] InThreadIdList,
                int InThreadCount);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhSetGlobalExclusiveACL(
                [MarshalAs(UnmanagedType.LPArray, SizeParamIndex=1)]
                int[] InThreadIdList,
                int InThreadCount);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhIsThreadIntercepted(
                IntPtr InHandle,
                int InThreadID,
                out bool OutResult);

    /*
        The following barrier methods are meant to be used in hook handlers only!

        They will all fail with STATUS_NOT_SUPPORTED if called outside a
        valid hook handler...
    */
    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhBarrierGetCallback(out IntPtr OutValue);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhBarrierGetReturnAddress(out IntPtr OutValue);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhBarrierGetAddressOfReturnAddress(out IntPtr OutValue);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhBarrierBeginStackTrace(out IntPtr OutBackup);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhBarrierEndStackTrace(IntPtr OutBackup);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhBarrierGetCallingModule(out IntPtr OutValue);

    /*
        Debug helper API.
    */
    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int DbgAttachDebugger();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int DbgGetThreadIdByHandle(
        IntPtr InThreadHandle,
        out int OutThreadId);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int DbgGetProcessIdByHandle(
        IntPtr InProcessHandle,
        out int OutProcessId);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int DbgHandleToObjectName(
        IntPtr InNamedHandle,
        IntPtr OutNameBuffer,
        int InBufferSize,
        out int OutRequiredSize);


    /*
        Injection support API.
    */
    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern int RhInjectLibrary(
        int InTargetPID,
        int InWakeUpTID,
        int InInjectionOptions,
        string InLibraryPath_x86,
        string InLibraryPath_x64,
        IntPtr InPassThruBuffer,
        int InPassThruSize);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int RhIsX64Process(
        int InProcessId,
        out bool OutResult);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern bool RhIsAdministrator();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int RhGetProcessToken(int InProcessId, out IntPtr OutToken);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern int RtlInstallService(
        string InServiceName,
        string InExePath,
        string InChannelName);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int RhWakeUpProcess();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern int RtlCreateSuspendedProcess(
       string InEXEPath,
       string InCommandLine,
        int InProcessCreationFlags,
       out int OutProcessId,
       out int OutThreadId);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern int RhInstallDriver(
       string InDriverPath,
       string InDriverName);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int RhInstallSupportDriver();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern bool RhIsX64System();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern IntPtr GacCreateContext();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern void GacReleaseContext(ref IntPtr RefContext);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern bool GacInstallAssembly(
        IntPtr InContext,
        string InAssemblyPath,
        string InDescription,
        string InUniqueID);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern bool GacUninstallAssembly(
        IntPtr InContext,
        string InAssemblyName,
        string InDescription,
        string InUniqueID);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern int LhGetHookBypassAddress(IntPtr handle, out IntPtr address);
}

static class NativeApiX64
{
    private const string DllName = "EasyHook64.dll";

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
    public static extern string RtlGetLastErrorStringCopy();

    public static string RtlGetLastErrorString()
    {
        return RtlGetLastErrorStringCopy();
    }

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int RtlGetLastError();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern void LhUninstallAllHooks();

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhInstallHook(
        IntPtr InEntryPoint,
        IntPtr InHookProc,
        IntPtr InCallback,
        IntPtr OutHandle);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhUninstallHook(IntPtr RefHandle);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhWaitForPendingRemovals();


    /*
        Setup the ACLs after hook installation. Please note that every
        hook starts suspended. You will have to set a proper ACL to
        make it active!
    */
    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhSetInclusiveACL(
                [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 1)]
                int[] InThreadIdList,
                int InThreadCount,
                IntPtr InHandle);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhSetExclusiveACL(
                [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 1)]
                int[] InThreadIdList,
                int InThreadCount,
                IntPtr InHandle);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhSetGlobalInclusiveACL(
                [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 1)]
                int[] InThreadIdList,
                int InThreadCount);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhSetGlobalExclusiveACL(
                [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 1)]
                int[] InThreadIdList,
                int InThreadCount);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhIsThreadIntercepted(
                IntPtr InHandle,
                int InThreadID,
                out bool OutResult);

    /*
        The following barrier methods are meant to be used in hook handlers only!

        They will all fail with STATUS_NOT_SUPPORTED if called outside a
        valid hook handler...
    */
    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhBarrierGetCallback(out IntPtr OutValue);

    [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
    public static extern int LhBarrierGetReturnAddress(out IntPtr OutValue);
